--- a/style.css
+++ b/style.css
@@ -401,6 +401,7 @@ strong{
 }
 
 .secure-text {
+  user-select: text;
   -webkit-flex-shrink: 0;
   flex-shrink: 0;
   text-align: center;
@@ -690,6 +691,7 @@ strong{
   }
 
 }
+
 
 
 
